# NMS

./: .gitignore  CMakeLists.txt  README.md  benchmark.cpp  benchmark_codelet.cpp  codelet.cpp  ipu_test.hpp  ipu_utils.cpp  ipu_utils.hpp  legacynms.cpp  legacynms.hpp  nms.cpp  nms.hpp  nms_lower_codelet.cpp  reference.cpp  reference.hpp  tests.cpp  utils.hpp
popart/: Makefile  codelet.cpp  nms_custom_op.cpp  run_nms.py  test_popart.py  test_poptorch.py
poptorch_ops/best_class/: nms_custom_op.cpp  popart_nms_example.py  poptorch_nms_example.py
poptorch_ops/multiclass/: Makefile  nms_custom_op.cpp  popart_nms_example.py  poptorch_nms_example.py
tensorflow_ops/best_class/: Makefile  nms_custom_op.cpp  tf_nms_example.py
tensorflow_ops/multiclass/: Makefile  codelet.cpp  nms_custom_op.cpp  tf_nms_example.py
